# preamble-stitch

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: rust-release.yml
src/: cli.rs  lib.rs  main.rs
