[package]
name = "preamble-stitch"
description = "Tool that manages large preambles for LaTeX documents"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = "0.9.16"
anyhow = "1.0.68"
tera = { version = "1.17.1", features = ["builtins"] }
clap = { version = "4.1.6", features = ["derive"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
